@@ -112,19 +112,21 @@
 			<varlistentry>
 				<term><option>max_inflight_messages</option></term>
 				<listitem>
-					<para>The maximum number of messages that can be being
-					processed by a connected client at one time. This includes
-					messages currently going through handshakes for QoS 1 or 2
-					and messages that are being retried. Defaults to 20. Set to
-					0 for no maximum.</para>
+					<para>The maximum number of QoS 1 or 2 messages that can be
+					in the process of being transmitted simultaneously.  This
+					includes messages currently going through handshakes and
+					messages that are being retried. Defaults to 20. Set to 0
+					for no maximum. If set to 1, this will guarantee in-order
+					delivery of messages.</para>
 				</listitem>
 			</varlistentry>
 			<varlistentry>
 				<term><option>max_queued_messages</option></term>
 				<listitem>
 					<para>The maximum number of QoS 1 or 2 messages to hold in
-					a queue for a disconnected client. Defaults to 100. Set to
-					0 for no maximum.</para>
+					the queue above those messages that are currently in
+					flight. Defaults to 100. Set to 0 for no maximum (not
+					recommended).</para>
 				</listitem>
 			</varlistentry>
 			<varlistentry>
